--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-angular",
+  "name": "prune-angular",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,38 +11,62 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.9",
-    "@angular/common": "~8.2.9",
-    "@angular/compiler": "~8.2.9",
-    "@angular/core": "~8.2.9",
-    "@angular/forms": "~8.2.9",
-    "@angular/platform-browser": "~8.2.9",
-    "@angular/platform-browser-dynamic": "~8.2.9",
-    "@angular/router": "~8.2.9",
-    "angular-froala-wysiwyg": "^3.0.6",
-    "rxjs": "~6.4.0",
+    "@angular/animations": "~8.2.14",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
+    "@angular/core": "~8.2.14",
+    "@angular/flex-layout": "^8.0.0-beta.27",
+    "@angular/forms": "~8.2.14",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "~8.2.14",
+    "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/router": "~8.2.14",
+    "@angularclass/hmr": "^2.1.3",
+    "@aspnet/signalr": "1.1.4",
+    "@capacitor/android": "1.4.0",
+    "@capacitor/core": "1.4.0",
+    "@ionic/storage": "^2.2.0",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
+    "@syncfusion/ej2-angular-base": "^17.4.47",
+    "@syncfusion/ej2-angular-grids": "^17.4.50",
+    "file-saver": "^2.0.2",
+    "hammerjs": "^2.0.8",
+    "js-cache": "1.0.3",
+    "jwt-decode": "^2.2.0",
+    "libphonenumber-js": "^1.7.34",
+    "moment": "2.24.0",
+    "moment-timezone": "0.5.27",
+    "ngx-drag-drop": "^2.0.0",
+    "ngx-image-cropper": "^3.0.3",
+    "ngx-material-timepicker": "^5.3.0",
+    "perfect-scrollbar": "^1.5.0",
+    "rxjs": "~6.5.4",
+    "string-format": "^2.0.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.8",
-    "@angular/cli": "~8.3.8",
-    "@angular/compiler-cli": "~8.2.9",
-    "@angular/language-service": "~8.2.9",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
+    "@angular-devkit/build-angular": "~0.803.23",
+    "@angular/cli": "~8.3.23",
+    "@angular/compiler-cli": "~8.2.14",
+    "@angular/language-service": "~8.2.14",
+    "@capacitor/cli": "1.4.0",
+    "@types/jasmine": "~3.5.1",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/node": "~13.1.8",
+    "codelyzer": "^5.2.1",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
+    "karma": "~4.4.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.1",
+    "karma-jasmine": "~3.1.0",
+    "karma-jasmine-html-reporter": "^1.5.1",
+    "protractor": "~5.4.2",
+    "ts-node": "~8.6.2",
+    "tslint": "~6.0.0",
     "typescript": "~3.5.3"
   }
 }
